reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__scheduler.rs_line_838_col_9_001.log

*** crates/tracewake-core/src/scheduler.rs:838:9: replace no_human::routine_window_family -> Option<RoutineFamily> with Some(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/scheduler.rs
+++ replace no_human::routine_window_family -> Option<RoutineFamily> with Some(Default::default())
@@ -830,28 +830,17 @@
     }
 
     fn routine_window_family(
         agent_state: &AgentState,
         actor_id: &ActorId,
         window: &DayWindow,
         actor_known_state: &ActorKnownPlanningContext,
     ) -> Option<RoutineFamily> {
-        let family = eligible_routine_execution_for_actor(agent_state, actor_id, window)
-            .map(|(_, execution)| execution.family)?;
-        if family == RoutineFamily::WorkBlock
-            && !actor_known_state
-                .known_workplaces()
-                .values()
-                .any(|place_id| place_id == actor_known_state.current_place_id())
-        {
-            Some(RoutineFamily::GoToWork)
-        } else {
-            Some(family)
-        }
+        Some(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 
     fn eligible_routine_execution_for_actor<'a>(
         agent_state: &'a AgentState,
         actor_id: &ActorId,
         window: &DayWindow,
     ) -> Option<(&'a RoutineExecutionId, &'a crate::agent::RoutineExecution)> {
         agent_state


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/scheduler.rs` has changed (1781905040.735926014s, 3s after last build at 1781905037.163925981s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `RoutineFamily: Default` is not satisfied
   --> crates/tracewake-core/src/scheduler.rs:838:14
    |
838 |         Some(Default::default()) /* ~ changed by cargo-mutants ~ */
    |              ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `RoutineFamily`
   --> crates/tracewake-core/src/agent/routine.rs:9:1
    |
  9 | pub enum RoutineFamily {
    | ^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `routine::RoutineFamily: Default` is not satisfied
   --> crates/tracewake-core/src/scheduler.rs:838:14
    |
838 |         Some(Default::default()) /* ~ changed by cargo-mutants ~ */
    |              ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `routine::RoutineFamily`
   --> crates/tracewake-core/src/agent/routine.rs:9:1
    |
  9 | pub enum RoutineFamily {
    | ^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
